Request URL is too long issue fix

--- a/src/assetbundles/src/css/Translations.css
+++ b/src/assetbundles/src/css/Translations.css
@@ -867,7 +867,10 @@ td.target{
     cursor: pointer !important;
 }
 
-
+.non-editable {
+    background-color: #E8E8E8 !important;
+    cursor: default;
+}
 
 .processing {
     background-color: #ced8e5 !important;
